--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+   "proxy": "https://openapi.koreainvestment.com:9443"
 }
