--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -47,5 +49,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-   "proxy": "https://openapi.koreainvestment.com:9443"
+  "proxy": "https://openapi.koreainvestment.com:9443"
 }
